# mcp-reality-calendar-test-task

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: mcp_handlers.py
app/core/: settings.py
app/db/: manager.py
app/db/models/: cache_models.py
app/exceptions/: cache_exceptions.py  remote_resolver_exceptions.py
app/models/: base_resolver.py  data_models.py
app/resolvers/: remote_description_resolver.py  remote_product_resolver.py
app/services/: excel_service.py  product_info_service.py
app/services/models/: base_resolver.py  data_models.py
app/services/resolvers/: local_resolver.py  remote_resolver.py
