[project]
name = "test-mcp-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "environs>=14.3.0",
    "mcp[cli]>=1.14.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
